# chat

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/chat_client/: CMakeLists.txt
app/chat_client/src/controllers/: messageController.h  settings_controller.h
app/chat_client/src/models/: activeChatModel.cpp  activeChatModel.h  client.h
app/chat_server/: CMakeLists.txt  server.cpp
cmake/: CompilerWarnings.cmake  Conan.cmake
include/server_utilities/: client.h  events.h  http_session.h  listener.h  message.h  websocket.h  websocket_impl.h  websocket_session.h
src/: CMakeLists.txt  chat_client.html  client.cpp  client.h  http_session.cpp  http_session.h  listener.cpp  listener.h  message.h  server.cpp  server.h  shared_state.cpp  shared_state.h  user.h  websocket.cpp  websocket_impl.cpp  websocket_session.cpp  websocket_session.h
src/app/chat_client/src/controllers/: CMakeLists.txt
src/app/chat_client/src/models/: client.h
src/app/chat_client/views/: MainView.qml
src/client_ui/: CMakeLists.txt  views.qrc
src/client_ui/src/: client_main.cpp  cm-lib_global.h
src/client_ui/src/controllers/: CMakeLists.txt  main_controller.cpp  main_controller.h  messageController.cpp  settings_controller.cpp  settings_controller.h
src/client_ui/src/models/: CMakeLists.txt  activeChatModel.cpp  messageBoxCppModel.h
src/client_ui/views/: MainView.qml  MessageCard.qml  SettingsView.qml
test/: CMakeLists.txt  tests.cpp
